Tests/CompilerTests/negative/duplicate-binding.hylo
fun f(x: Void) {
  let x = ()
  let y = ()
  let y = ()
}
